--- a/gmailChipsLibrary/build.gradle
+++ b/gmailChipsLibrary/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    buildToolsVersion '25.0.0'
 
     defaultConfig {
         minSdkVersion 11
@@ -21,7 +21,7 @@ dependencies {
     compile('com.mopub:mopub-sdk-native-static:4.10.0@aar') {
         transitive = true
     }
-    compile files('libs/Parse-1.9.1.jar')
     compile files('libs/bolts-android-1.2.0-javadoc.jar')
     compile files('libs/bolts-android-1.2.0.jar')
+    compile 'com.google.firebase:firebase-auth:9.6.0'
 }
