--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Jul 13 17:55:26 IST 2017
-sdk.dir=C\:\\Users\\ENTER\\AppData\\Local\\Android\\Sdk
+#Fri Jul 14 16:21:22 IST 2017
+sdk.dir=C\:\\Users\\beesolver\\AppData\\Local\\Android\\Sdk
