--- a/bigCConnect/src/main/AndroidManifest.xml
+++ b/bigCConnect/src/main/AndroidManifest.xml
@@ -134,7 +134,7 @@
                 <action android:name="android.intent.action.USER_PRESENT" />
             </intent-filter>
         </receiver>-->
-        <receiver
+       <!-- <receiver
             android:name="com.parse.GcmBroadcastReceiver"
             android:permission="com.google.android.c2dm.permission.SEND">
             <intent-filter>
@@ -143,7 +143,7 @@
 
                 <category android:name="com.bigc_connect" />
             </intent-filter>
-        </receiver>
+        </receiver>-->
         <!--<receiver
             android:name="com.bigc.receivers.NotificationReceiver"
             android:exported="false">
@@ -205,6 +205,21 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/provider_paths"/>
         </provider>
+
+        <service
+            android:name="com.bigc.receivers.CustomFirebaseMessagingService">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+            </intent-filter>
+        </service>
+
+        <service
+            android:name="com.bigc.receivers.CustomFirebaseInstanceIDService">
+            <intent-filter>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
+            </intent-filter>
+        </service>
+
     </application>
 
 </manifest>
