--- a/bigCConnect/build.gradle
+++ b/bigCConnect/build.gradle
@@ -50,6 +50,8 @@ dependencies {
     }
     //compile 'com.github.JakeWharton:ViewPagerIndicator:2.4.1'
 
+    compile 'com.squareup.okhttp3:okhttp:3.4.1'
+
     compile 'com.google.firebase:firebase-core:9.6.0' //firebase
     compile 'com.google.firebase:firebase-storage:9.6.0'
     compile 'com.google.firebase:firebase-database:9.6.0'
