--- a/bigCConnect/src/main/AndroidManifest.xml
+++ b/bigCConnect/src/main/AndroidManifest.xml
@@ -98,7 +98,7 @@
         <activity
             android:name="com.bigc.activities.HomeScreen"
             android:label="@string/app_name"
-            android:launchMode="singleInstance"
+            android:launchMode="singleTop"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme"
             android:windowSoftInputMode="adjustPan">
